--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div id="headertop">
                 <div id="menu" style="width: 339px; height: 41px">
                     <ul>
-                        <li id="button1"><a href="index.html" title="">
+                        <li id="button1"><a href="./" title="">
 						<font face="Trebuchet MS">Home</font></a></li>
-                        <li id="button2"><a href="faq.html" title="">
+                        <li id="button2"><a href="./faq" title="">
 						<font face="Trebuchet MS">FAQ</font></a></li>
                         <li id="button4"><a href="https://nephilimcorp.com/contact" target="_blank" title="">
 						<font face="Trebuchet MS">Contact</font></a></li>
