--- a/faq.html
+++ b/faq.html
@@ -26,7 +26,7 @@
                         </ul>
                     </div>
                     <div id="logo" style="width: 432px; height: 69px">
-                        <a href="index.html"><img src="images/logo.png"></a>
+                        <a href="./"><img src="images/logo.png"></a>
                     </div>
     
                 </div><div style="clear:both;"></div>
