--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script>
 		// Get the form and input element
 const searchForm = document.getElementById("search-form");
-const searchInput = document.getElementById("search-input");
+const searchInput = document.getElementById("search-submit");
 
 // Add a submit event listener to the form
 searchForm.addEventListener("submit", function (e) {
