--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<script>
 		// Get the form and input element
-const searchForm = document.getElementById("search-form");
+const searchForm = document.getElementById("search-text");
 const searchInput = document.getElementById("search-submit");
 
 // Add a submit event listener to the form
