--- a/nash.html
+++ b/nash.html
@@ -75,7 +75,7 @@
                     <div class="column" style="background-color: transparent">
                     <h2>Latest Feature Update for NASH</h2>
                     <p>FU-NASH-2023-001 | October 11, 2023 | 
-                    <a href="downloads/NASHSetup.exe" target="_blank">Download</a>
+                    <a href="downloads/NASHSetup.msi" target="_blank">Download</a>
                     </p>
                     </div>
                     </div>
@@ -87,7 +87,7 @@
                     <div class="column" style="background-color: transparent">
                     <h2>Feature Update for NASH</h2>
                     <p>FU-NASH-2023-001 | October 11, 2023 | 
-                    <a href="downloads/NASHSetup.exe" target="_blank">Download</a>
+                    <a href="downloads/NASHSetup.msi" target="_blank">Download</a>
                     </p>
                     </div>
                     </div>
