--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ searchForm.addEventListener("submit", function (e) {
 
                     <h4><font face="Trebuchet MS">Latest Headlines</font></h4>
                     <ul>
-                        <li><a href="https://nephilimcorp.com/nash" target="_blank"><font face="Trebuchet MS">Nephilim AIML Scripting Helper scheduled to release soon.</font></a><font face="Trebuchet MS">
+                        <li><a href="https://nephilimcorp.com/nash" target="_blank"><font face="Trebuchet MS">Nephilim AIML Scripting Helper is here!</font></a><font face="Trebuchet MS">
 						</font>
-                            <p><font face="Trebuchet MS">The Nephilim AIML Scripting Helper is on the horizon, poised to revolutionize your AIML scripting experience. Stay tuned for a powerful tool that will empower your AI scripting endeavors. Coming soon.</font></p>
+                            <p><font face="Trebuchet MS">We are thrilled to announce that NASH, the cutting-edge AIML editor developed by Nephilim, is finally here. After months of hard work, our team has successfully brought NASH to life.</font></p>
                             <!--<div class="readl"><a href="#">
 								<font face="Trebuchet MS">Read More</font></a></div></li>-->
                                 <br>
