--- a/nash.html
+++ b/nash.html
@@ -46,8 +46,8 @@
                         </font>
                         </form>
                         <font face="Trebuchet MS">
-                        <img src="images/log_ls.png" title="" alt="" style="padding-right: 5px; padding-bottom: 2px;"/></font><a href="https://docs.google.com/forms/d/e/1FAIpQLScrc2TGWwrPM93Jm5AONZogOv6ZkuN8aOWJnrV4DBNMntOUJw/viewform?usp=sf_link" target="_blank"><font face="Trebuchet MS">Feedback form</font></a><font face="Trebuchet MS"><br />
-                        <img src="images/log_ls.png" title="" alt="" style="padding-right: 5px; padding-bottom: 2px;"/></font><a href="https://nephilimcorp.com/" target="_blank"><font face="Trebuchet MS">Nephilim website</font></a>
+                        <img src="images/log_ls.png" title="" alt="" style="padding-right: 5px; padding-bottom: 2px;"/></font><a href="https://docs.google.com/forms/d/e/1FAIpQLScrc2TGWwrPM93Jm5AONZogOv6ZkuN8aOWJnrV4DBNMntOUJw/viewform?usp=sf_link" target="_blank"><font face="Trebuchet MS">Feedback Form</font></a><font face="Trebuchet MS"><br />
+                        <img src="images/log_ls.png" title="" alt="" style="padding-right: 5px; padding-bottom: 2px;"/></font><a href="https://nephilimcorp.com/" target="_blank"><font face="Trebuchet MS">Nephilim Website</font></a>
                     </div>
                     <div id="log_bot"></div>
 
